ThymioGUI/src/parser/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.5.1

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TK_AND=1, TK_OR=2, TK_POSS=3, TK_DO=4, TK_ID=5, TK_VAR=6, TK_IMP=7, TK_SEP=8, 
		TK_EQUAL=9, TK_NUM_EQUAL=10, TK_DOT=11, TK_NEG=12, TK_BRK_OPEN=13, TK_BRK_CLOSE=14, 
		TK_GEQ=15, TK_GE=16, TK_LEQ=17, TK_LE=18, TK_PLUS=19, TK_MINUS=20, TK_NUM=21, 
		WS=22;
	public static final int
		RULE_th_rule = 0, RULE_th_premise = 1, RULE_th_consequence = 2, RULE_poss_formula = 3, 
		RULE_fluent_formula = 4, RULE_do_formula = 5, RULE_id_formula = 6, RULE_neg_formula = 7, 
		RULE_comp_formula = 8, RULE_expr = 9, RULE_op = 10, RULE_th_formula = 11, 
		RULE_args = 12, RULE_arg = 13;
	public static final String[] ruleNames = {
		"th_rule", "th_premise", "th_consequence", "poss_formula", "fluent_formula", 
		"do_formula", "id_formula", "neg_formula", "comp_formula", "expr", "op", 
		"th_formula", "args", "arg"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'poss'", "'do'", null, null, "'->'", "','", "'='", 
		"'=='", "'.'", null, "'('", "')'", "'>='", "'>'", "'<='", "'<'", "'+'", 
		"'-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TK_AND", "TK_OR", "TK_POSS", "TK_DO", "TK_ID", "TK_VAR", "TK_IMP", 
		"TK_SEP", "TK_EQUAL", "TK_NUM_EQUAL", "TK_DOT", "TK_NEG", "TK_BRK_OPEN", 
		"TK_BRK_CLOSE", "TK_GEQ", "TK_GE", "TK_LEQ", "TK_LE", "TK_PLUS", "TK_MINUS", 
		"TK_NUM", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Th_ruleContext extends ParserRuleContext {
		public Th_premiseContext th_premise() {
			return getRuleContext(Th_premiseContext.class,0);
		}
		public TerminalNode TK_IMP() { return getToken(HelloParser.TK_IMP, 0); }
		public Th_consequenceContext th_consequence() {
			return getRuleContext(Th_consequenceContext.class,0);
		}
		public TerminalNode TK_DOT() { return getToken(HelloParser.TK_DOT, 0); }
		public Th_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_th_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTh_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTh_rule(this);
		}
	}

	public final Th_ruleContext th_rule() throws RecognitionException {
		Th_ruleContext _localctx = new Th_ruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_th_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			th_premise();
			setState(29);
			match(TK_IMP);
			setState(30);
			th_consequence();
			setState(31);
			match(TK_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Th_premiseContext extends ParserRuleContext {
		public String f;
		public Th_formulaContext th_formula;
		public List<Th_formulaContext> th_formula() {
			return getRuleContexts(Th_formulaContext.class);
		}
		public Th_formulaContext th_formula(int i) {
			return getRuleContext(Th_formulaContext.class,i);
		}
		public List<TerminalNode> TK_AND() { return getTokens(HelloParser.TK_AND); }
		public TerminalNode TK_AND(int i) {
			return getToken(HelloParser.TK_AND, i);
		}
		public Th_premiseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_th_premise; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTh_premise(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTh_premise(this);
		}
	}

	public final Th_premiseContext th_premise() throws RecognitionException {
		Th_premiseContext _localctx = new Th_premiseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_th_premise);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			((Th_premiseContext)_localctx).th_formula = th_formula();
			((Th_premiseContext)_localctx).f =  ((Th_premiseContext)_localctx).th_formula.f;
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_AND) {
				{
				{
				setState(35);
				match(TK_AND);
				setState(36);
				((Th_premiseContext)_localctx).th_formula = th_formula();
				_localctx.f += ", " + ((Th_premiseContext)_localctx).th_formula.f;
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Th_consequenceContext extends ParserRuleContext {
		public String f;
		public Poss_formulaContext poss_formula;
		public Fluent_formulaContext fluent_formula;
		public Th_formulaContext th_formula;
		public Poss_formulaContext poss_formula() {
			return getRuleContext(Poss_formulaContext.class,0);
		}
		public Fluent_formulaContext fluent_formula() {
			return getRuleContext(Fluent_formulaContext.class,0);
		}
		public Th_formulaContext th_formula() {
			return getRuleContext(Th_formulaContext.class,0);
		}
		public Th_consequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_th_consequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTh_consequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTh_consequence(this);
		}
	}

	public final Th_consequenceContext th_consequence() throws RecognitionException {
		Th_consequenceContext _localctx = new Th_consequenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_th_consequence);
		try {
			setState(53);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((Th_consequenceContext)_localctx).poss_formula = poss_formula();
				((Th_consequenceContext)_localctx).f =  ((Th_consequenceContext)_localctx).poss_formula.f;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				((Th_consequenceContext)_localctx).fluent_formula = fluent_formula();
				((Th_consequenceContext)_localctx).f =  ((Th_consequenceContext)_localctx).fluent_formula.f;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				((Th_consequenceContext)_localctx).th_formula = th_formula();
				((Th_consequenceContext)_localctx).f =  ((Th_consequenceContext)_localctx).th_formula.f;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Poss_formulaContext extends ParserRuleContext {
		public String f;
		public Token TK_POSS;
		public ArgsContext args;
		public TerminalNode TK_POSS() { return getToken(HelloParser.TK_POSS, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public Poss_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_poss_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPoss_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPoss_formula(this);
		}
	}

	public final Poss_formulaContext poss_formula() throws RecognitionException {
		Poss_formulaContext _localctx = new Poss_formulaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_poss_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			((Poss_formulaContext)_localctx).TK_POSS = match(TK_POSS);
			setState(56);
			match(TK_BRK_OPEN);
			setState(57);
			((Poss_formulaContext)_localctx).args = args();
			setState(58);
			match(TK_BRK_CLOSE);
			((Poss_formulaContext)_localctx).f =  (((Poss_formulaContext)_localctx).TK_POSS!=null?((Poss_formulaContext)_localctx).TK_POSS.getText():null) + "(" + ((Poss_formulaContext)_localctx).args.s + ")";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fluent_formulaContext extends ParserRuleContext {
		public String f;
		public Token TK_ID;
		public ArgsContext args;
		public Do_formulaContext do_formula;
		public TerminalNode TK_ID() { return getToken(HelloParser.TK_ID, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public Do_formulaContext do_formula() {
			return getRuleContext(Do_formulaContext.class,0);
		}
		public Fluent_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fluent_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterFluent_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitFluent_formula(this);
		}
	}

	public final Fluent_formulaContext fluent_formula() throws RecognitionException {
		Fluent_formulaContext _localctx = new Fluent_formulaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fluent_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((Fluent_formulaContext)_localctx).TK_ID = match(TK_ID);
			setState(62);
			match(TK_BRK_OPEN);
			setState(63);
			((Fluent_formulaContext)_localctx).args = args();
			setState(64);
			match(TK_SEP);
			setState(65);
			((Fluent_formulaContext)_localctx).do_formula = do_formula();
			setState(66);
			match(TK_BRK_CLOSE);

				((Fluent_formulaContext)_localctx).f =  (((Fluent_formulaContext)_localctx).TK_ID!=null?((Fluent_formulaContext)_localctx).TK_ID.getText():null) + "(" + ((Fluent_formulaContext)_localctx).args.s + "," + ((Fluent_formulaContext)_localctx).do_formula.f + ")";

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Do_formulaContext extends ParserRuleContext {
		public String f;
		public Token TK_DO;
		public Token TK_VAR;
		public TerminalNode TK_DO() { return getToken(HelloParser.TK_DO, 0); }
		public List<TerminalNode> TK_VAR() { return getTokens(HelloParser.TK_VAR); }
		public TerminalNode TK_VAR(int i) {
			return getToken(HelloParser.TK_VAR, i);
		}
		public Do_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterDo_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitDo_formula(this);
		}
	}

	public final Do_formulaContext do_formula() throws RecognitionException {
		Do_formulaContext _localctx = new Do_formulaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_do_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((Do_formulaContext)_localctx).TK_DO = match(TK_DO);
			((Do_formulaContext)_localctx).f =  (((Do_formulaContext)_localctx).TK_DO!=null?((Do_formulaContext)_localctx).TK_DO.getText():null) + "(";
			setState(71);
			match(TK_BRK_OPEN);
			setState(72);
			((Do_formulaContext)_localctx).TK_VAR = match(TK_VAR);
			_localctx.f += (((Do_formulaContext)_localctx).TK_VAR!=null?((Do_formulaContext)_localctx).TK_VAR.getText():null) + ",";
			setState(74);
			match(TK_SEP);
			setState(75);
			((Do_formulaContext)_localctx).TK_VAR = match(TK_VAR);
			_localctx.f += (((Do_formulaContext)_localctx).TK_VAR!=null?((Do_formulaContext)_localctx).TK_VAR.getText():null) + ")";
			setState(77);
			match(TK_BRK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_formulaContext extends ParserRuleContext {
		public String id;
		public Token TK_VAR;
		public ArgContext arg;
		public Th_formulaContext th_formula;
		public TerminalNode TK_VAR() { return getToken(HelloParser.TK_VAR, 0); }
		public TerminalNode TK_EQUAL() { return getToken(HelloParser.TK_EQUAL, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public Th_formulaContext th_formula() {
			return getRuleContext(Th_formulaContext.class,0);
		}
		public Id_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterId_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitId_formula(this);
		}
	}

	public final Id_formulaContext id_formula() throws RecognitionException {
		Id_formulaContext _localctx = new Id_formulaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id_formula);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((Id_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(80);
				match(TK_EQUAL);
				setState(81);
				((Id_formulaContext)_localctx).arg = arg();
				 ((Id_formulaContext)_localctx).id =  (((Id_formulaContext)_localctx).TK_VAR!=null?((Id_formulaContext)_localctx).TK_VAR.getText():null) + "=" + ((Id_formulaContext)_localctx).arg.s; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				((Id_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(85);
				match(TK_EQUAL);
				setState(86);
				((Id_formulaContext)_localctx).th_formula = th_formula();
				 ((Id_formulaContext)_localctx).id =  (((Id_formulaContext)_localctx).TK_VAR!=null?((Id_formulaContext)_localctx).TK_VAR.getText():null) + "=" + ((Id_formulaContext)_localctx).th_formula.f; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Neg_formulaContext extends ParserRuleContext {
		public String f;
		public Th_formulaContext th_formula;
		public Comp_formulaContext comp_formula;
		public TerminalNode TK_NEG() { return getToken(HelloParser.TK_NEG, 0); }
		public Th_formulaContext th_formula() {
			return getRuleContext(Th_formulaContext.class,0);
		}
		public TerminalNode TK_BRK_OPEN() { return getToken(HelloParser.TK_BRK_OPEN, 0); }
		public Comp_formulaContext comp_formula() {
			return getRuleContext(Comp_formulaContext.class,0);
		}
		public TerminalNode TK_BRK_CLOSE() { return getToken(HelloParser.TK_BRK_CLOSE, 0); }
		public Neg_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_neg_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterNeg_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitNeg_formula(this);
		}
	}

	public final Neg_formulaContext neg_formula() throws RecognitionException {
		Neg_formulaContext _localctx = new Neg_formulaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_neg_formula);
		try {
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(TK_NEG);
				setState(92);
				((Neg_formulaContext)_localctx).th_formula = th_formula();
				((Neg_formulaContext)_localctx).f =  "\\+" + ((Neg_formulaContext)_localctx).th_formula.f; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(TK_NEG);
				setState(96);
				match(TK_BRK_OPEN);
				setState(97);
				((Neg_formulaContext)_localctx).comp_formula = comp_formula();
				setState(98);
				match(TK_BRK_CLOSE);
				((Neg_formulaContext)_localctx).f =  "\\+(" + ((Neg_formulaContext)_localctx).comp_formula.f + ")"; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comp_formulaContext extends ParserRuleContext {
		public String f;
		public Token TK_VAR;
		public ExprContext expr;
		public TerminalNode TK_VAR() { return getToken(HelloParser.TK_VAR, 0); }
		public TerminalNode TK_GEQ() { return getToken(HelloParser.TK_GEQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode TK_GE() { return getToken(HelloParser.TK_GE, 0); }
		public TerminalNode TK_LEQ() { return getToken(HelloParser.TK_LEQ, 0); }
		public TerminalNode TK_LE() { return getToken(HelloParser.TK_LE, 0); }
		public TerminalNode TK_NUM_EQUAL() { return getToken(HelloParser.TK_NUM_EQUAL, 0); }
		public Comp_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterComp_formula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitComp_formula(this);
		}
	}

	public final Comp_formulaContext comp_formula() throws RecognitionException {
		Comp_formulaContext _localctx = new Comp_formulaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comp_formula);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((Comp_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(104);
				match(TK_GEQ);
				setState(105);
				((Comp_formulaContext)_localctx).expr = expr();
				((Comp_formulaContext)_localctx).f =  (((Comp_formulaContext)_localctx).TK_VAR!=null?((Comp_formulaContext)_localctx).TK_VAR.getText():null) + ">=" + ((Comp_formulaContext)_localctx).expr.e; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				((Comp_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(109);
				match(TK_GE);
				setState(110);
				((Comp_formulaContext)_localctx).expr = expr();
				((Comp_formulaContext)_localctx).f =  (((Comp_formulaContext)_localctx).TK_VAR!=null?((Comp_formulaContext)_localctx).TK_VAR.getText():null) + ">" + ((Comp_formulaContext)_localctx).expr.e; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				((Comp_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(114);
				match(TK_LEQ);
				setState(115);
				((Comp_formulaContext)_localctx).expr = expr();
				((Comp_formulaContext)_localctx).f =  (((Comp_formulaContext)_localctx).TK_VAR!=null?((Comp_formulaContext)_localctx).TK_VAR.getText():null) + "<=" + ((Comp_formulaContext)_localctx).expr.e; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				((Comp_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(119);
				match(TK_LE);
				setState(120);
				((Comp_formulaContext)_localctx).expr = expr();
				((Comp_formulaContext)_localctx).f =  (((Comp_formulaContext)_localctx).TK_VAR!=null?((Comp_formulaContext)_localctx).TK_VAR.getText():null) + "<=" + ((Comp_formulaContext)_localctx).expr.e; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				((Comp_formulaContext)_localctx).TK_VAR = match(TK_VAR);
				setState(124);
				match(TK_NUM_EQUAL);
				setState(125);
				((Comp_formulaContext)_localctx).expr = expr();
				((Comp_formulaContext)_localctx).f =  (((Comp_formulaContext)_localctx).TK_VAR!=null?((Comp_formulaContext)_localctx).TK_VAR.getText():null) + " is " + ((Comp_formulaContext)_localctx).expr.e; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String e;
		public OpContext op;
		public List<OpContext> op() {
			return getRuleContexts(OpContext.class);
		}
		public OpContext op(int i) {
			return getRuleContext(OpContext.class,i);
		}
		public TerminalNode TK_PLUS() { return getToken(HelloParser.TK_PLUS, 0); }
		public TerminalNode TK_MINUS() { return getToken(HelloParser.TK_MINUS, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			setState(145);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((ExprContext)_localctx).op = op();
				((ExprContext)_localctx).e =  ((ExprContext)_localctx).op.o;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				((ExprContext)_localctx).op = op();
				((ExprContext)_localctx).e =  ((ExprContext)_localctx).op.o;
				setState(135);
				match(TK_PLUS);
				setState(136);
				((ExprContext)_localctx).op = op();
				_localctx.e += "+" + ((ExprContext)_localctx).op.o;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				((ExprContext)_localctx).op = op();
				((ExprContext)_localctx).e =  ((ExprContext)_localctx).op.o;
				setState(141);
				match(TK_MINUS);
				setState(142);
				((ExprContext)_localctx).op = op();
				_localctx.e += "-" + ((ExprContext)_localctx).op.o;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpContext extends ParserRuleContext {
		public String o;
		public Token TK_VAR;
		public Token TK_NUM;
		public TerminalNode TK_VAR() { return getToken(HelloParser.TK_VAR, 0); }
		public TerminalNode TK_NUM() { return getToken(HelloParser.TK_NUM, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitOp(this);
		}
	}

	public final OpContext op() throws RecognitionException {
		OpContext _localctx = new OpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_op);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case TK_VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				((OpContext)_localctx).TK_VAR = match(TK_VAR);
				((OpContext)_localctx).o =  (((OpContext)_localctx).TK_VAR!=null?((OpContext)_localctx).TK_VAR.getText():null);
				}
				break;
			case TK_NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				((OpContext)_localctx).TK_NUM = match(TK_NUM);
				((OpContext)_localctx).o =  (((OpContext)_localctx).TK_NUM!=null?((OpContext)_localctx).TK_NUM.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
